--- a/src/styles/Question.css
+++ b/src/styles/Question.css
@@ -1,5 +1,6 @@
 .quiz-container {
     max-width: 400px;
+    padding: 20px;
 }
 
 .question>h1 {
@@ -13,6 +14,7 @@
 
 .question>hr {
     margin-top: 10px;
+    border: 0.5px solid var(--light-blue);
 }
 
 .answers-container {
@@ -29,6 +31,7 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    min-width: 65px;
 }
 
 .answer>h2 {
@@ -37,7 +40,7 @@
     font-weight: 500;
     font-size: 10px;
     color: var(--dark-blue);
-    padding: 5px;
+    padding: 5px 15px;
     text-align: center;
 }
 
