--- a/src/styles/Question.css
+++ b/src/styles/Question.css
@@ -1,6 +1,8 @@
 .quiz-container {
     max-width: 400px;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .question>h1 {
@@ -47,4 +49,26 @@
 .answer:hover {
     border-color: var(--light-blue);
     background-color: var(--light-blue);
+}
+
+.quiz-container>button {
+    width: fit-content;
+    align-self: center;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    color: white;
+    padding: 10px 20px;
+    background-color: var(--medium-blue);
+    cursor: pointer;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    margin-top: 15px;
+
+}
+
+button:active {
+    box-shadow: inset 1px 1px 10px #333;
 }
