--- a/src/styles/Question.css
+++ b/src/styles/Question.css
@@ -46,7 +46,8 @@
     text-align: center;
 }
 
-.answer:hover {
+.answer:hover,
+.selected {
     border-color: var(--light-blue);
     background-color: var(--light-blue);
 
