--- a/src/styles/Question.css
+++ b/src/styles/Question.css
@@ -46,11 +46,16 @@
     text-align: center;
 }
 
-.answer:hover,
+.answer:not(.correct):not(.wrong):not(.other):hover,
 .selected {
     border-color: var(--light-blue);
     background-color: var(--light-blue);
+}
 
+.correct,
+.wrong,
+.other {
+    cursor: default;
 }
 
 .correct {
@@ -63,7 +68,11 @@
     background-color: #F8BCBC;
 }
 
-.other {}
+.other,
+.wrong {
+    opacity: 50%;
+}
+
 
 .check-container {
     margin-top: 15px;
